--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "seed": "ts-node scripts/loadDb.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^1.5.0",
+    "@langchain/community": "^0.3.40",
+    "@langchain/core": "^0.3.44",
     "langchain": "^0.3.21",
     "next": "15.3.0",
     "openai": "^4.93.0",
@@ -23,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
